OptiX denoising artifacts with recent GPU driver 495.29.05 or newer on Linux #92472

Closed
opened 2021-10-25 13:27:35 +02:00 by Alaska · 17 comments
Member

System Information
Operating system: Linux-5.14.0-3-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.29.05

Blender Version
Affected driver versions:
495.29.05
495.44
Worked: With GPU drivers prior to 495.29.05.
Worked: Oddly enough testing with Blender from prior to the Cycles-X merge with driver version 495.29.05 does NOT have this issue.

Short description of error:
As per request of Patrick Mours at Nvidia I have created a task here. https://blender.chat/channel/render-cycles-module?msg=cJvvBJbttccHwtvG8

When using OptiX denoising with one of the affected GPU drivers listed above on Linux with recent versions of Blender 3.0 there are artifacts. Using an older GPU driver like 470.63.01 or a version of Blender from prior to the Cycles-X merge seems to resolve this issue. Here is an example of OptiX denoising in the viewport of the default scene with the artifacts:
OptiX denoising artifact.png

The artifact can change a bit based on what's on screen and how the scene was rendered. For example, changing the scene to be rendered with the CPU but denoised with OptiX shows this result instead:
OptiX denoising artifact 2.png

Exact steps for others to reproduce the error:

  1. Install Nvidia driver version 495.29.05 or newer on Linux.
  2. Use OptiX denoising in any Blender version that contains the Cycles-X merge.
**System Information** Operating system: Linux-5.14.0-3-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.29.05 **Blender Version** Affected driver versions: `495.29.05` `495.44` Worked: With GPU drivers prior to `495.29.05`. Worked: Oddly enough testing with Blender from prior to the Cycles-X merge with driver version `495.29.05` does NOT have this issue. **Short description of error:** As per request of Patrick Mours at Nvidia I have created a task here. https://blender.chat/channel/render-cycles-module?msg=cJvvBJbttccHwtvG8 When using OptiX denoising with one of the affected GPU drivers listed above on Linux with recent versions of Blender 3.0 there are artifacts. Using an older GPU driver like `470.63.01` or a version of Blender from prior to the Cycles-X merge seems to resolve this issue. Here is an example of OptiX denoising in the viewport of the default scene with the artifacts: ![OptiX denoising artifact.png](https://archive.blender.org/developer/F11489146/OptiX_denoising_artifact.png) The artifact can change a bit based on what's on screen and how the scene was rendered. For example, changing the scene to be rendered with the CPU but denoised with OptiX shows this result instead: ![OptiX denoising artifact 2.png](https://archive.blender.org/developer/F11489188/OptiX_denoising_artifact_2.png) **Exact steps for others to reproduce the error:** 1. Install Nvidia driver version `495.29.05` or newer on Linux. 2. Use OptiX denoising in any Blender version that contains the Cycles-X merge.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska

#92755 was marked as duplicate of this issue

#92755 was marked as duplicate of this issue
Patrick Mours was assigned by Alaska 2021-10-25 13:28:33 +02:00
Author
Member

Added subscriber: @pmoursnv

Added subscriber: @pmoursnv
Author
Member

Adding the Linux platform as this issue may be limited to it. I'm also assigning it to @pmoursnv as per his request in blender.chat.

Adding the Linux platform as this issue may be limited to it. I'm also assigning it to @pmoursnv as per his request in blender.chat.
Alaska changed title from OptiX denoising artifacts with recent GPU driver update to OptiX denoising artifacts with recent GPU driver 495.29.05 on Linux 2021-10-25 14:09:13 +02:00
Alaska changed title from OptiX denoising artifacts with recent GPU driver 495.29.05 on Linux to OptiX denoising artifacts with recent GPU driver 495.29.05 or newer on Linux 2021-10-27 11:48:33 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Since this is already assigned, will change status to reflect that.

Since this is already assigned, will change status to reflect that.
Member

Added subscriber: @Kdaf

Added subscriber: @Kdaf
Member

Can confirm the issue, worked fine with 470 but strange as you say with 495.

Can confirm the issue, worked fine with 470 but strange as you say with 495.

Added subscriber: @smramsay

Added subscriber: @smramsay

Added subscriber: @brecht

Added subscriber: @brecht

Not sure if we need to fix this on our side or if it can only be done in the driver, but marking as high priority until we know which it is.

Not sure if we need to fix this on our side or if it can only be done in the driver, but marking as high priority until we know which it is.

Added subscriber: @INFINIX

Added subscriber: @INFINIX

This is not just limited to linux, I am experiencing the same on windows
Current system - windows 11
Card - Rtx 2070 super, Driver version - 496.49(gaming drivers)
Blender version - 3.0 and up

Also, not just viewport, it affects the render as well
2.jpg

3.jpg

This is not just limited to linux, I am experiencing the same on windows Current system - windows 11 Card - Rtx 2070 super, Driver version - 496.49(gaming drivers) Blender version - 3.0 and up Also, not just viewport, it affects the render as well ![2.jpg](https://archive.blender.org/developer/F11752130/2.jpg) ![3.jpg](https://archive.blender.org/developer/F11752131/3.jpg)

This issue was referenced by blender/cycles@81ef2bff34

This issue was referenced by blender/cycles@81ef2bff34477103df2ab741b8d443aa161a6a94

This issue was referenced by 9daf6a69a6

This issue was referenced by 9daf6a69a6acd95f0b46bc45e5f3ae27d0904764
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92472
No description provided.